feat: heat source configuration - fix: time checking now won't skip 1 min